<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Textile Freedom</string>
    <string name="sewing">1.Plain Machine\n2.Two needle Machine\n3.Three thread over Lock Machine\n4.Four thread Over Machine\n5.Five thrad over lock machine\n6.Flad Lock machine\n7.Back Tab Machine\n8.kansai machine\n9.Bar-tack Machine\n10.Button Stitch Machine\n11.Button Hole Machine\n12.Eye let Hole Machine\n13.Feet of the Arm\n14.etc...\n</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="Quality_Management_for_Production">
\nThe merchandiser acts as the one point person for all communications with the customer. Whether there is a delivery problem or quality problem or approvals or anything, the merchandiser has to communicate with the customer and make him understand the situation. To be able to do so it is important that the merchandiser understand the quality and production norms. The merchandiser is expected to understand –\n\n

✓ Garment quality (visual, measurement, construction)\n
✓ Testing quality (fabric, trims &amp; garment)\n
✓Packaging quality\n
</string>
    <string name="Quality_Management">
\nQuality management is a method for ensuring that all the activities necessary to design, develop and implement a product or service are effective and efficient with respect to the system and its performance. Quality management can be considered to have three main components –\n\n

✓Quality control\n
✓Quality assurance &amp;\n
✓Quality improvement\n
</string>
    <string name="Quality_Management_System_in_Garment_Industry">
\nA number of systems, measures &amp; techniques are used so that only quality goods are produced in the first place &amp; defects do not originate at all. If they occur at all, there must be corrective action so that they are eliminated in the preliminary stage &amp; would not reappear, QMS generally employs the following measures, techniques to ensure that only quality goods are produced.\n\n

✓Inspect all incoming, in-process &amp; final goods to ensure quality of goods.\n
✓Ensure that all patterns &amp; grading of patterns are okay.\n
✓Inspect marker &amp; check if it is okay &amp; within consumption.\n
✓Inspect   spreading, cutting &amp; numbering.\n
✓ Ensure if relaxation times was given to knit fabric.\n
✓ Install   in-line inspector in the sewing lines.\n
✓Install  Traffic Light Chart system or other system to monitor quality in production line.\n
✓Inspect 100% goods delivered from sewing lines.\n
✓ Inspect the table quality passed garments with Statistical Technique.\n
✓ Control reject goods so that they do not mix-up with quality passed goods.\n
✓ Control repairable goods, washable goods so that they can be double checked to ensure quality.\n
✓Inspect goods with right equipments &amp; in right conditions (equipments should not be faulty &amp; inspection should be conducted on well lit table). S Inspect ironing, folding.\n
✓ Make repeat inspection of garments prior to poly-bagging.\n
✓Inspect poly-bagging &amp; assortment.\n
✓ Final table inspection is conducted prior to shipment of goods.\n
✓ Impart training to QA personnel so that they can easily identify defects &amp; understand the causes of defects.\n
✓ Impart training to QA personnel on Statistical Methods.\n
✓Make continuous improvement plans &amp; implement them.\n
</string>
    <string name="Quality_for_Export_Garment">\nIn an apparel industry manufactured garments must possess specified quality characteristics. They are given below –\n\n

✓ Measurements specified by the buyer.\n
✓ Specified sewing &amp; stitching quality.\n
✓ Raw materials must possess specified quality.\n
✓ Garments must possess specified design characteristics.\n
✓ Assortment specified by the buyer.\n
✓ Finishing, packing, packaging must be specified by the customers.\n\n

So, quality of garments implies whether the specified garment has been produced with specified raw materials, with buyer specified stitching &amp; sewing quality, with specified sizes, shapes, design &amp; assortment. The Challenges of garments factory are the followings-\n\n

✓Delivering of quality products.\n
✓Competitive price.\n
✓Delivery on time.\n
✓Short lead time.\n
✓Compliance of national laws and code of conduct.\n\n
</string>
    <string name="Quality_Level_of_a_Garment">\nBased on the existence of major &amp; minor defects garments can be classified into three categories –\n\n

        <b>✓ First quality garment.</b>\n
        <b>✓ Second quality garment.</b>\n
        <b>✓ Third quality garment.</b>\n\n

        <b>1st Quality Garments</b> - Apparels which can satisfy the buyers &amp; retain its all quality characteristics &amp; which do not possess any major defect are called 1\" quality or A-grade garments. A-Grade garments look well. They do not posses any major defect during purchase &amp; quality dose not decline on wearing.\n

        <b>2nd Quality Garments</b> - These garments though possess some minor defects, retain functional quality &amp; as such sale ability to the buyers. They sometimes lose some general good appearance characteristics but do not lose acceptability to the buyers. Some defects not visible from outside may also belong to these garments. Some buyers allow up to 2 main defects in 2nd quality garments. 3 or more major defects turn them into rejects.\n

        <b>3rd Quality Garments</b> - Apparels possessing major &amp; critical defects making functional quality impaired is 3rd quality garments. These garments are not in demand &amp; as such have no sale ability. Any critical &amp; major defect in any important part of a garment turns it into a reject.\n\n



<b>Zone Classification of a Garment -</b>\n
        <b>ZONE-A:</b>\n The zone of a garment that is easily visible is called Zone-A. Any minor defect falling on zone-A becomes major defect.\n
        <b>ZONE-B:</b>\n This zone is less visible than zone-A. Back upper side shirt or shirt yoke is zone-B.\n
        <b>ZONE-C:</b>\n Zone-C is the least visible portion of a garment. Defect on this zone are not visible.\n

</string>
    <string name="Garments_Quality">\nThe merchandiser should be aware of the quality parameters as laid down by the like minimum construction standards, defect zones, customer classification, packaging limitations etc. Defect
        A merchandiser should know that the customer will accept a small fabric defect like a slab in <b>ZONE C</b> but will not accept the same defect is <b>ZONE A.</b>\n\n

✓ Also a hole in a garment, whichever ZONE it falls in is always not acceptable.\n
✓ The merchandiser should also be aware of the packaging limitations. Maximum and minimum carton size, dimension and weight acceptable by the buyer.\n
✓Merchandise may have to take commercial decision based on understanding of the buyer quality level and so should work closely with the factory quality team as well as the buyer technical team.\n
</string>
    <string name="Testing_Quality">\nThe merchandiser should be aware of the various testing parameters in case of fabric. Garment and trims. Hence the different parameters on which the fabric, garment or trim are tested, the acceptable level, the tolerance level allowed by buyer. Should be known to the merchandiser.\n\n

✓ FPT (fabric performance test)\n
✓GPT (garment performance test)\n
✓Only if the merchandiser is aware of these things can he take rational and quick decisions at the time of a failure or problem\n
</string>
    <string name="Packaging_Quality">\nMerchandisers should have the knowledge of all those parameters. helps to deal with various day-to-day situations.\n\n

<b>For example - </b>Buyer has specified the number of pieces per carton and the maximum weight and dimensions of the carton. Suppose Pieces per Carton - 60 (given on the PO) and maximum weight of carton 16 kgs (given in quality manual). If each garment weights 300 grams then, the total carton weight will become around 20 kgs (18 kgs of samples + 2 kg as the weight of carton itself)- Thus merchandiser will have to seek permission from buyer to ship the order with 20 kg weight of carton OR change the PO
to state 45 pieces/carton. Further to this, the merchandise should also follow up on the quality inspections being done by the quality auditor on his / her style. Thus merchandiser should insist regular
quality checks of the product at various stages - in sewing, finishing and packing. The merchandiser should also ask for all the quality audit reports and study the same. This is important so that in case same defect is observed again and again, he can bring the same to the notice of top management so that adequate attention is paid to it and the problem is resolved quickly.\n
</string>
    <string name="pretreatment_chemical_consumption">Pretreatment Chemical Consumption</string>
    <string name="singeing_amp_desizing_machine"><![CDATA[Singeing & Desizing Machine]]></string>
    <string name="scouring_amp_bleaching_machine"><![CDATA[Scouring & Bleaching Machine]]></string>
    <string name="mercerizing_machine">Mercerizing Machine</string>
    <string name="singeing_amp_desizing"><![CDATA[Singeing & Desizing]]></string>
    <string name="m_c_prameter">(M/C Prameter)</string>
    <string name="_1_for_all_cotton_color_fabrics">1.For All Cotton Color Fabrics</string>
    <string name="_2_white_cotton_color_amp_special_yarn_dye_fabrics"><![CDATA[2.White Cotton Color &Special Yarn Dye Fabrics]]></string>
    <string name="_3_for_cotton_color_peach_fabrics">3.For Cotton Color Peach Fabrics</string>
    <string name="_4_for_all_yarn_dyed_amp_pc_cvc_fabrics"><![CDATA[4.For All Yarn dyed & pc/cvc Fabrics]]></string>
    <string name="_5_cold_bleach_for_pc_cvc">5.Cold Bleach For pc/cvc</string>
    <string name="_6_for_pc_cvc_yarn_dyed_peach_finish_fabrics">6.For PC/CVC yarn dyed peach finish fabrics</string>
    <string name="_7_cold_bleach_for_bull_twill">7.Cold Bleach for Bull Twill</string>
    <string name="_8_important_prameter">8.Important prameter for various</string>
    <string name="order_create">Order Create</string>
    <string name="order_no">Order No :</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="em" />
    <string name="construction">Construction</string>
    <string name="fabric_construction_add">Fabric Construction Add</string>
    <string name="process">Process :</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="attempts_remaining_5">attempts remaining 5</string>
    <string name="only_use_for_authorized_person">Only use for authorized person</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="version_1_0">Version:1.0</string>
    <string name="apps_update">Apps Update</string>
    <string name="rate_us">Rate Us</string>
    <string name="others_apps">Others Apps</string>
    <string name="share">Share</string>
</resources>