<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_home"
        android:icon="@drawable/home_24"
        android:title="@string/home"/>

    <item android:id="@+id/menu_call"
        android:icon="@drawable/ic_person_24"
        android:title="@string/about"/>


    <item
        android:icon="@drawable/ic_baseline_apps_24"
        android:title="@string/version_1_0"/>
    <item
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/apps_update"/>
    <item
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/rate_us"/>
    <item
        android:icon="@drawable/ic_baseline_sms_failed_24"
        android:title="@string/others_apps"/>
    <item
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"/>
</menu>