<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_launcher_background"
    android:gravity="center"
    tools:context=".CategoryAdd">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:gravity="center_horizontal"
            android:text="@string/order_create"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#1AFB78"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/order_no"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#1548FD"
            android:textStyle="bold|italic" />

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/edit1"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:inputType="phone"
            android:textColor="#000000"
            app:mask=" ###########"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/save1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/teal_200"
            android:gravity="center"
            android:text="@string/save"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#FFD600"
            android:textAlignment="center"
            android:text="@string/cancel"
            android:id="@+id/cancel1"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>
</LinearLayout>




